--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="non-footer">
             <!-- Profile Picture -->
             <div class="profile">
-                <img src="profile.JPG" />
+                <img src="profile.jpg" />
             </div>
 
             <!-- Name and Description Text -->
@@ -24,11 +24,11 @@
             <!-- Linked Buttons -->
             <div class="link">
                 <a href="https://www.instagram.com/mikamera.gallery?igsh=Z2R3YTBkMDN5dWwy">
-                    <img src="instagram-logo.PNG" alt="Telegram Logo">
+                    <img src="instagram-logo.png" alt="Telegram Logo">
                     📷 Main Photography Account 📷
                 </a> 
                 <a href="https://www.instagram.com/valentino_mika?igsh=MWJzZzFrZ2V0dTBvcw==">
-                    <img src="instagram-logo.PNG" alt="Instagram Logo">
+                    <img src="instagram-logo.png" alt="Instagram Logo">
                     Old Photography Account
                 </a>
             </div>
