adjustments for smartphone and tablet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="link">
                 <a href="https://www.instagram.com/mikamera.gallery?igsh=Z2R3YTBkMDN5dWwy">
                     <img src="instagram-logo.png" alt="Telegram Logo">
-                    📷 Main Photography Account 📷
+                    Main Photography Account 📷
                 </a> 
                 <a href="https://www.instagram.com/valentino_mika?igsh=MWJzZzFrZ2V0dTBvcw==">
                     <img src="instagram-logo.png" alt="Instagram Logo">
