new logo png's and improvement for smartphone and tablet

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Linked Buttons -->
             <div class="link">
                 <a href="https://www.instagram.com/mikamera.gallery?igsh=Z2R3YTBkMDN5dWwy">
-                    <img src="instagram-logo.png" alt="Telegram Logo">
+                    <img src="instagram-logo.png" alt="Instagram Logo">
                     Main Photography Account 📷
                 </a> 
                 <a href="https://www.instagram.com/valentino_mika?igsh=MWJzZzFrZ2V0dTBvcw==">
